# cmake-example

./: .gitignore  CMakeLists.txt  README.md  foo.pc.in  generate_coverage.sh
.devcontainer/: Dockerfile  devcontainer.json  qemu-arm.sh
.github/workflows/: build.yaml
cmake/toolchain/: arm.cmake
doc/: ctest_junit.md  parse_ctest_junit.py
include/: foo.hpp
src/: foo.cpp
test-src/: foo_test.cpp
